# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: run-linter-and-tests.yml  run-linter.yml
gendiff/: cli.py  comparator.py  gendiff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_generate_diff.py  test_render_json.py  test_render_plain.py  test_render_stylish.py
tests/fixtures/: json_result
