[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff package generates the difference between two .json or .yaml files in three available formats."
authors = ["Liliya Samigullina <lil_1992@mail.ru>"]
packages = [
    { include = "gendiff" }
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
